--- a/plugin-a/pom.xml
+++ b/plugin-a/pom.xml
@@ -11,6 +11,15 @@
   <version>1.0-SNAPSHOT</version>
   <packaging>hpi</packaging>
 
+  <dependencies>
+    <dependency>
+      <groupId>jp.ikedam.jenkins.plugins.reproduce-jenkins-19152</groupId>
+      <artifactId>plugin-b</artifactId>
+      <version>1.0-SNAPSHOT</version>
+      <optional>true</optional>
+    </dependency>
+  </dependencies>
+
   <!-- get every artifact through repo.jenkins-ci.org, which proxies all the artifacts that we need -->
   <repositories>
     <repository>
